discussion/kv_engine/129817/129817_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39436: Track per-collection disk_size with Magma

Update the tracked collection size on disk when backed by Magma. This
was already done under couchstore.

Change-Id: Id3513d105045c272f25c0c34ec2ab4e2f04906fd

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-06-22 16:47:41.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-22 17:09:36.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24714/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1187:36:
error: no viable conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24)" to "magma::Magma::WriteDocsCallback" (aka "function<void (const magma::Magma::WriteOperation &, const bool, const bool)>")
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24714/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28703/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(1184): error C2664: "magma::Status magma::Magma::WriteDocs(const magma::Magma::KVStoreID,const std::vector<magma::Magma::WriteOperation,std::allocator<_Ty>> &,const magma::Magma::KVStoreRevision,const magma::Magma::WriteDocsCallback,const magma::Magma::PostWriteDocsCallback)": cannot convert argument 4 from "MagmaKVStore::saveDocs::<lambda_d6349a92395ca3904a2c0542f743d77b>" to "const magma::Magma::WriteDocsCallback" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28703/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2890/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1187:36: error: no viable conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24)" to "magma::Magma::WriteDocsCallback" (aka "function<void (const magma::Magma::WriteOperation &, const bool, const bool)>") [clang-diagnostic-error]
                                   writeDocsCB,
                                   ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/bits/std_function.h:421:7: note: candidate constructor not viable: no known conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24)" to "std::nullptr_t" (aka "nullptr_t") for 1st argument
      function(nullptr_t) noexcept
      ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/bits/std_function.h:432:7: note: candidate constructor not viable: no known conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24)" to "const std::function<void (const magma::Magma::WriteOperation &, bool, bool)> &" for 1st argument
      function(const function& __x);
      ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/bits/std_function.h:441:7: note: candidate constructor not viable: no known conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24)" to "std::function<void (const magma::Magma::WriteOperation &, bool, bool)> &&" for 1st argument
      function(function&& __x) noexcept : _Function_base()
      ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/bits/std_function.h:465:2: note: candidate template ignored: substitution failure [with _Functor = (lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24), $1 = void]: no type named "type" in "std::result_of<(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24) &(const magma::Magma::WriteOperation &, bool, bool)>"
        function(_Functor);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/magma/include/libmagma/magma.h:724:46: note: passing argument to parameter "docCallback" here
                     const WriteDocsCallback docCallback = nullptr,
                                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2890/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1187:36:
error: no viable conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24)" to "magma::Magma::WriteDocsCallback" (aka "function<void (const magma::Magma::WriteOperation &, const bool, const bool)>") [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2890/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4261/ : FAILURE

Failure of GoogleTest "AllBackends/DurabilityEPBucketTest.PersistPrepareWrite/persistentRocksdb_value_only":

<pre>
[ RUN      ] AllBackends/DurabilityEPBucketTest.PersistPrepareWrite/persistentRocksdb_value_only
[2020-06-22T17:00:43.459Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_durability_test.cc:470: Failure
[2020-06-22T17:00:43.459Z] Expected equality of these values:
[2020-06-22T17:00:43.459Z]   1
[2020-06-22T17:00:43.459Z]   ckptList.size()
[2020-06-22T17:00:43.459Z]     Which is: 2
[2020-06-22T17:00:43.459Z] [  FAILED  ] AllBackends/DurabilityEPBucketTest.PersistPrepareWrite/persistentRocksdb_value_only, where GetParam() = ("persistentRocksdb", "value_only") (13302 ms)
AllBackends/DurabilityEPBucketTest.PersistPrepareWrite/persistentRocksdb_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4261/ )

Failure of a CTest test [2020-06-22T17:00:43.459Z]  13/398 Test #173: ep-engine_ep_unit_tests.AllBackends/DurabilityEPBucketTest ........................................................ ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4261/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4321/ : FAILURE

Compile error at [2020-06-22T16:54:52.468Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1188:51:
error: no matching function for call to ?magma::Magma::WriteDocs(Vbid::id_type, MagmaKVStore::WriteOps&, __gnu_cxx::__alloc_traits<std::allocator<Monotonic<long unsigned int> > >::value_type&, MagmaKVStore::saveDocs(VB::Commit&, kvstats_ctx&)::<lambda(const magma::Magma::WriteOperation&, bool, magma::Slice)>&, MagmaKVStore::saveDocs(VB::Commit&, kvstats_ctx&)::<lambda(MagmaKVStore::WriteOps&)>&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4321/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4401/ : FAILURE

Compile error at [2020-06-22T17:03:11.208Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1188:51:
error: no matching function for call to ?magma::Magma::WriteDocs(Vbid::id_type, MagmaKVStore::WriteOps&, __gnu_cxx::__alloc_traits<std::allocator<Monotonic<long unsigned int> > >::value_type&, MagmaKVStore::saveDocs(VB::Commit&, kvstats_ctx&)::<lambda(const magma::Magma::WriteOperation&, bool, magma::Slice)>&, MagmaKVStore::saveDocs(VB::Commit&, kvstats_ctx&)::<lambda(MagmaKVStore::WriteOps&)>&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4401/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3368/ : FAILURE

Compile error at [2020-06-22T16:51:45.822Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1187:36:
error: no viable conversion from "(lambda at ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24)" to "magma::Magma::WriteDocsCallback" (aka "function<void (const magma::Magma::WriteOperation &, const bool, const bool)>")
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3368/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12140/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1395/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2020-06-23 10:23:51.000000000
Message: 
Patch Set 3: Code-Review-2

Needs to check docExists first
----------------------------------------------------------------------------------------------------------------------
